feat: adiciona swagger ui e suite de testes unitarios para a regra de negocio